# deltaglider_proxy

./: .gitignore  CHANGELOG.md  CLA.md  CLAUDE.md  Cargo.toml  DOCKERHUB.md  Dockerfile  README.md  build.rs  deltaglider_proxy.example.yaml  marketing-summary.md
.cargo/: config.toml
.cla-signatures/: signatures.json
.claude/agent-memory/codebase-hygiene-reviewer/: MEMORY.md  antipatterns.md  hotspots.md
.cursor/rules/: ui-embed-rebuild-restart.mdc
.github/: pull_request_template.md
.github/builder/: Dockerfile
.github/workflows/: ci.yml  cla.yml  integration-image.yml  marketing-pages.yml  prepare-release.yml  release.yml  test-all-nightly.yml
demo/s3-browser/: Dockerfile.deltaglider
demo/s3-browser/ui/: knip.json  package-lock.json  package.json  playwright.config.ts  storyboard.html  tsconfig.json  vite.config.ts
demo/video/: compose.sh  music.sh  synth_upbeat.py
docs/dev/: ci-infra.md  contributing.md  s3-adapter-decision.md
docs/plan/: admin-ui-taxonomy.md  architecture-ha-audit-2026-06-28.md  delta-efficiency-redesign.md  delta-efficiency-xray.md  multi-backend-bucket-ux.md  slack-connector-impl.md  streaming-delta-any-size.md  verify-feedback-followup.md  webhook-gui-impl.md  webhook-gui.md
docs/product/: 10-first-bucket.md  20-production-deployment.md  20-production-security-checklist.md  23-docker-compose.md  41-troubleshooting.md  changelog.md  faq.md  manifest.json
docs/product/auth/: 31-sigv4-and-iam.md  32-iam-conditions.md  33-rate-limiting.md
docs/product/explanation/: delta-compression.md  encryption-at-rest.md  jobs-and-durability.md  multi-backend-architecture.md  security-model.md
docs/product/how-to/: back-up-and-restore.md  create-iam-users.md  deploy-on-kubernetes.md  deploy-with-docker-compose.md  encrypt-data-at-rest.md  expire-and-archive-objects.md  gate-requests-with-admission-rules.md  go-to-production.md  manage-iam-as-code.md  migrate-existing-data-into-the-proxy.md  monitor-with-prometheus.md  move-a-bucket-between-backends.md  publish-a-public-folder.md  replicate-a-bucket.md  restrict-access-with-conditions.md  rotate-encryption-keys.md  route-a-bucket-to-a-backend.md  run-multiple-instances.md  send-event-notifications.md  serve-tls.md  set-bucket-compression-and-quotas.md  set-up-sso.md  trace-requests.md  troubleshooting.md  upgrade.md  view-live-logs.md
docs/product/reference/: admin-api.md  authentication.md  cli.md  configuration.md  declarative-iam.md  encryption.md  event-outbox.md  iam-permissions.md  lifecycle.md  metrics.md  rate-limits.md  replication.md  s3-api-compatibility.md
docs/product/tutorials/: first-delta-savings.md  kubernetes-hello-world.md  secure-your-proxy.md
examples/: scrape_full_config.rs
examples/docker-compose/: .gitignore  deltaglider_proxy.yaml  docker-compose.yml  secrets.env.example
iac-prod/: README.md  backup-zip-to-secrets-env.sh  deltaglider_proxy.yaml  docker-compose.yml  secrets.env.template
marketing/: package-lock.json  package.json
marketing/src/components/: Capabilities.astro  ComparisonTable.astro  CompressionResultsTable.astro  ControlPlane.astro  CustomerSegmentBlock.astro  DemoVideo.astro  DropIn.astro  Glyph.astro  HeroSlideshow.tsx  HowItWorks.astro  MechanismExplanation.astro  PricingCalculator.tsx  ScreenshotGallery.astro  SimoneCallout.astro  StorageScale.astro  TestimonialCard.astro  TestimonialsBlock.astro  (+1 more)
scripts/: bump-runner-nofile.sh  check-docs-registry.sh  check-integration-tests-in-ci.sh  check-no-committed-secrets.sh  check-savings-math.sh  check-spdx-headers.sh  e2e-smoke.sh  gen-changelog-doc.sh  restart-local-with-prod-backup.sh  test-prod-config.sh
src/: audit.rs  background.rs  bucket_policy.rs  bucket_usage.rs  config.rs  config_apply.rs  config_db_sync.rs  config_sections.rs  demo.rs  event_delivery.rs  event_outbox.rs  init.rs  job_loop.rs  lib.rs  logs.rs  main.rs  metadata_cache.rs  metrics.rs  multipart.rs  rate_limiter.rs  s3_adapter_s3s.rs  secret.rs  security.rs  session.rs  slack_format.rs  startup.rs  tls.rs  transfer.rs  transfer_plan.rs  types.rs  usage_scanner.rs
src/admission/: evaluator.rs  middleware.rs  mod.rs  spec.rs
src/api/: auth.rs  aws_chunked.rs  errors.rs  extractors.rs  mod.rs  xml.rs
src/cli/: aws_creds.rs  bucket_acl.rs  config.rs  cp.rs  engine_factory.rs  filter.rs  ls.rs  migrate.rs  mod.rs  rm.rs  s3_url.rs  stats.rs  sync.rs  verify.rs
src/config/: env.rs  expansion.rs  mod.rs
src/config_db/: auth_providers.rs  declarative.rs  groups.rs  job_store.rs  mod.rs  users.rs
src/deltaglider/: cache.rs  codec.rs  file_router.rs  mod.rs  savings.rs  spool.rs
src/iam/: declarative.rs  keygen.rs  middleware.rs  mod.rs  permissions.rs  types.rs
src/lifecycle/: mod.rs  planner.rs  scheduler.rs  state_store.rs  worker.rs
src/maintenance/: gate.rs  migrate.rs  mod.rs  store.rs  worker.rs
src/replication/: event_consumer.rs  mod.rs  parity.rs  planner.rs  remediation.rs  scheduler.rs  state_store.rs  worker.rs
src/storage/: encrypting.rs  filesystem.rs  mod.rs  routing.rs  s3.rs  traits.rs  xattr_meta.rs
tests/: admin_bulk_objects_test.rs  admin_config_test.rs  admin_login_as_test.rs  admin_section_test.rs  admission_test.rs  auth_integration_test.rs  aws_chunked_upload_test.rs  bootstrap_password_hash_invariant_test.rs  browser_session_connect_test.rs  bucket_existence_test.rs  bucket_usage_test.rs  cli_admin_test.rs  cli_s3_bucket_acl_test.rs  cli_s3_cp_test.rs  cli_s3_ls_test.rs  cli_s3_migrate_test.rs  cli_s3_stats_test.rs  cli_s3_sync_test.rs  cli_s3_verify_test.rs  concurrency_test.rs  config_sync_ha_test.rs  config_sync_test.rs  delta_test.rs  encryption_test.rs  error_test.rs  external_auth_test.rs  iam_authorization_test.rs  iam_declarative_reconcile_test.rs  iam_identity_test.rs  iam_list_scope_test.rs  iam_mode_test.rs  iam_persona_test.rs  iam_test.rs  iam_variables_clone_test.rs  interop_test.rs  large_object_e2e_test.rs  lifecycle_test.rs  list_truncation_test.rs  maintenance_reencrypt_test.rs  memory_test.rs  (+20 more)
tests/common/: mod.rs
tests/fixtures/: prod_shape_config.yaml
(+283 files in other folders)
