[package]
name = "deltaglider_proxy"
version = "0.9.7"
description = "S3-compatible proxy with transparent delta compression"
license = "GPL-2.0-only"
readme = "README.md"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"
schemars = "0.8"
# IP + CIDR parsing for admission block source_ip_list authoring.
ipnet = { version = "2.11", features = ["serde"] }
# Glob patterns for admission block path_glob matcher.
globset = "0.4"
# Human-friendly duration parsing ("15m", "1h", "30s") — used by replication config.
humantime = "2"

# AWS S3 SDK (for backend storage) — direct client config, no aws-config/STS bloat
aws-sdk-s3 = { version = "1", default-features = false, features = ["rt-tokio", "default-https-client"] }
aws-credential-types = "1"

# Async support
async-trait = "0.1"

# Delta compression (uses xdelta3 CLI binary, no Rust crate needed)

# TLS certificate generation
rcgen = "0.13"

# Password hashing
bcrypt = "0.15"

# Random number generation
rand = { version = "0.8", features = ["std_rng"] }

# Hashing & HMAC (sha2 + hmac used for SigV4 verification)
sha2 = "0.10"
hmac = "0.12"
md-5 = "0.10"
hex = "0.4"
subtle = "2"
zeroize = "1"
base64 = "0.22"

# Encryption at rest (AES-256-GCM)
aes-gcm = "0.10"

# XML for S3 responses
quick-xml = { version = "0.36", features = ["serialize"] }

# ZIP archive (Full Backup). Pure-Rust deflate via flate2 (no system
# zlib). Used by the backup export/import handlers to bundle
# config.yaml + iam.json + secrets.json + manifest.json into a single
# atomic artifact.
zip = { version = "2", default-features = false, features = ["deflate"] }

# Utilities
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
dashmap = "6"
moka = { version = "0.12", features = ["sync"] }
itoa = "1"
bytes = "1"
futures = { version = "0.3", default-features = false, features = ["std", "alloc"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["trace", "cors", "timeout"] }
arc-swap = "1"
urlencoding = "2"
tempfile = "3"
libc = "0.2"
xattr = "1"

# External auth (OIDC/OAuth)
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }
serde_urlencoded = "0.7"
regex = "1"

# Embedded demo UI
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Per-request unique IDs
uuid = { version = "1", features = ["v4"] }

# Metrics
prometheus = { version = "0.13", default-features = false, features = ["process"] }
rusqlite = { version = "0.39.0", features = ["bundled-sqlcipher"] }
iam-rs = "0.0.23"
tower = { version = "0.5", features = ["limit"] }
s3s = { version = "0.13.0", optional = true }

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json", "cookies"] }
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["minio"] }
walkdir = "2"
# Already transitive via aws-sdk-s3; named here so storage/s3.rs unit
# tests can construct `SdkError::service_error(...)` values directly
# for the error-classification test battery. Pinned to a version range
# compatible with whatever aws-sdk-s3 1.x resolves.
aws-smithy-runtime-api = "1"
aws-smithy-types = "1"
# Property-based testing. Used where the function under test has a
# clean acceptance rule (bucket-name validation, SigV4 parsing) —
# generates hundreds of random inputs per run and shrinks failures
# to the minimal reproducer. Deterministic via the PROPTEST_CASES
# env var; default case count is 256.
proptest = "1"

[features]
s3s-adapter = ["dep:s3s"]
