[package]
name = "deltaglider_proxy"
version = "1.8.2"
description = "S3-compatible proxy with transparent delta compression"
license = "GPL-3.0-only"
readme = "README.md"
edition = "2021"

# md-5's import name is `md5`, which cargo-machete can't match to the crate.
[package.metadata.cargo-machete]
ignored = ["md-5"]

[dependencies]
# Web framework
axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "0.8"
# IP + CIDR parsing for admission block source_ip_list authoring.
ipnet = { version = "2.11", features = ["serde"] }
# Glob patterns for admission block path_glob matcher.
globset = "0.4"
# Human-friendly duration parsing ("15m", "1h", "30s") — used by replication config.
humantime = "2"

# AWS S3 SDK (for backend storage) — direct client config, no aws-config/STS bloat
aws-sdk-s3 = { version = "1", default-features = false, features = ["rt-tokio", "default-https-client"] }
aws-credential-types = "1"

# Async support
async-trait = "0.1"

# Delta compression (uses xdelta3 CLI binary, no Rust crate needed)

# TLS certificate generation
rcgen = "0.13"

# Password hashing
bcrypt = "0.15"

# Random number generation
rand = { version = "0.8", features = ["std_rng"] }

# Hashing & HMAC (sha2 + hmac used for SigV4 verification)
sha2 = "0.10"
hmac = "0.12"
md-5 = "0.10"
hex = "0.4"
subtle = "2"
zeroize = "1"
base64 = "0.22"

# Encryption at rest (AES-256-GCM)
aes-gcm = "0.10"

# ZIP archive (Full Backup). Pure-Rust deflate via flate2 (no system
# zlib). Used by the backup export/import handlers to bundle
# config.yaml + iam.json + secrets.json + manifest.json into a single
# atomic artifact.
zip = { version = "2", default-features = false, features = ["deflate"] }

# Utilities
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
parking_lot = "0.12"
dashmap = "6"
moka = { version = "0.12", features = ["sync", "future"] }
bytes = "1"
futures = { version = "0.3", default-features = false, features = ["std", "alloc"] }
multer = "3"
tokio-util = { version = "0.7", features = ["io", "rt"] }
tower-http = { version = "0.6", features = ["trace", "cors", "timeout"] }
arc-swap = "1"
urlencoding = "2"
tempfile = "3"
libc = "0.2"
xattr = "1"

# External auth (OIDC/OAuth)
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }
serde_urlencoded = "0.7"
# regex-lite: subset of `regex`'s API — enough for our
# `Regex::new(pattern).ok().is_match(s)` usage on user-supplied email
# patterns in IAM group-mapping rules. Skips aho-corasick /
# regex-syntax / regex-automata / unicode tables; ~30s off cold
# release builds. A contributor reaching for `RegexSet`, named
# captures, or Unicode-property classes needs the full `regex` crate.
regex-lite = "0.1"

# Embedded demo UI
# NOTE: `compression` would pull include-flate → zstd-sys (~66s of C
# compile) just to gzip our static JS/CSS in the binary; the wire
# format is already gzipped by the client/CDN, so the work is wasted.
rust-embed = { version = "8" }
mime_guess = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Per-request unique IDs
uuid = { version = "1", features = ["v4"] }

# Metrics. Bumped to 0.14 to drop the transitive thiserror v1 copy
# (newer prometheus uses thiserror v2, which matches the rest of the
# tree — saves one full thiserror compile per build).
prometheus = { version = "0.14", default-features = false, features = ["process"] }
rusqlite = { version = "0.39.0", features = ["bundled-sqlcipher"] }
iam-rs = "0.0.23"
tower = { version = "0.5", features = ["limit"] }
s3s = "0.14.0"
# Recursive directory walker for `cli::cp -r` (local→s3 path). Also
# used by tests that walk the filesystem backend tree.
walkdir = "2"

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json", "cookies", "multipart"] }
# Already transitive via aws-sdk-s3; named here so storage/s3.rs unit
# tests can construct `SdkError::service_error(...)` values directly
# for the error-classification test battery. Pinned to a version range
# compatible with whatever aws-sdk-s3 1.x resolves.
aws-smithy-runtime-api = "1"
aws-smithy-types = "1"
# Property-based testing. Used where the function under test has a
# clean acceptance rule (bucket-name validation, SigV4 parsing) —
# generates hundreds of random inputs per run and shrinks failures
# to the minimal reproducer. Deterministic via the PROPTEST_CASES
# env var; default case count is 256.
proptest = "1"
# Benchmark harness for the delta-codec hot paths (encode/decode).
# Local/manual signal only — NOT wired into the CI merge gate (benches
# are slow + machine-dependent, treated like coverage). Run with
# `cargo bench --bench codec`.
criterion = "0.5"

[[bench]]
name = "codec"
harness = false

